--- a/.cproject
+++ b/.cproject
@@ -55,7 +55,7 @@
                                     								
                                 </option>
                                 								
-                                <option id="gnu.c.compiler.option.misc.other.553136979" superClass="gnu.c.compiler.option.misc.other" useByScannerDiscovery="false" value="-c -fmessage-length=0 -pthread -rdynamic" valueType="string"/>
+                                <option id="gnu.c.compiler.option.misc.other.553136979" name="Other flags" superClass="gnu.c.compiler.option.misc.other" useByScannerDiscovery="false" value="-c -fmessage-length=0 -pthread -rdynamic" valueType="string"/>
                                 								
                                 <inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1370881315" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
                                 							
@@ -240,5 +240,7 @@
     </storageModule>
     	
     <storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
+    	
+    <storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
     
 </cproject>
